--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.14",
@@ -27,6 +31,7 @@
     "@storybook/test": "^7.6.14",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
