--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "scroll-carousel-react": "^1.0.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.14",
