--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
+    "sass-loader": "^14.1.1",
     "storybook": "^7.6.14",
+    "style-loader": "^3.3.4",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
